--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<!-- header -->
-	<header class="header">
+	<!-- <header class="header">
 		<div class="container">
 			<a class="header__link" href="./index.html">
 				<img class="header__link__image" src="img/logo.svg" alt="Logo" />
@@ -60,78 +60,96 @@
 	</main>
 
 
-	<!-- <div class="collection">
-            
-                
-            <div class="container">
-                <h1 class="collection__heading">our collection<h1/>
-                <div class="collection__inner">
-                    <div class="collection__block">
-                        <img src="img/2x/expresso.png" srcset="img/2x/expresso.png 1x, img/2x/expresso@2x.png 2x" alt="Gran Espresso" class="collection__img">
+	<div class="collection">
+
+
+		<div class="container">
+			<span class="collection__heading__span"><h1 class="collection__heading">our collection
+				<h1 /></span>
+				<div class="collection__inner">
+					<div class="collection__block">
+						<img src="img/2x/expresso.png" srcset="img/2x/expresso.png 1x, img/2x/expresso@2x.png 2x"
+							alt="Gran Espresso" class="collection__img">
 						<div class="collection__text">
 							<h3 class="collection__title">Gran Espresso</h3>
-							<p class="collection__p">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
+							<p class="collection__p">Light and flavorful blend with cocoa and black pepper for an
+								intense experience.</p>
 						</div>
-                    </div>
-                    <div class="collection__block">
-                        <img src="img/2x/kopi2.png" srcset="img/2x/kopi2.png 1x, img/2x/kopi2@2x.png 2x" alt="Planalto" class="collection__img">
+					</div>
+					<div class="collection__block">
+						<img src="img/2x/kopi2.png" srcset="img/2x/kopi2.png 1x, img/2x/kopi2@2x.png 2x" alt="Planalto"
+							class="collection__img">
 						<div class="collection__text">
 							<h3 class="collection__title">Planalto</h3>
-							<p class="collection__p">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
+							<p class="collection__p">Brazilian dark roast with rich and velvety body, and hints of
+								fruits and nuts.</p>
 						</div>
-                    </div>
-                    <div class="collection__block">
-                        <img src="img/2x/kopi3.png" srcset="img/2x/kopi3.png 1x, img/2x/kopi3@2x.png 2x" alt="Piccollo" class="collection__img">
+					</div>
+					<div class="collection__block">
+						<img src="img/2x/kopi3.png" srcset="img/2x/kopi3.png 1x, img/2x/kopi3@2x.png 2x" alt="Piccollo"
+							class="collection__img">
 						<div class="collection__text">
 							<h3 class="collection__title">Piccollo</h3>
-							<p class="collection__p">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+							<p class="collection__p">Mild and smooth blend featuring notes of toasted almond and dried
+								cherry.</p>
 						</div>
-                    </div>
-                    <div class="collection__block">
-                        <img src="img/2x/expresso.png" srcset="img/2x/expresso.png 1x, img/2x/expresso@2x.png 2x" alt="Danche" class="collection__img">
+					</div>
+					<div class="collection__block">
+						<img src="img/2x/expresso.png" srcset="img/2x/expresso.png 1x, img/2x/expresso@2x.png 2x"
+							alt="Danche" class="collection__img">
 						<div class="collection__text">
 							<h3 class="collection__title">Danche</h3>
-							<p class="collection__p">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
+							<p class="collection__p">Ethiopian hand-harvested blend densely packed with vibrant fruit
+								notes.</p>
 						</div>
-                    </div>
-                </div>
-            </div>
-        </div>
+					</div>
+				</div>
+		</div>
+	</div> -->
 
-		
-		<div class="why">
-			<div class="container">
-				<div class="why__inner">
-					<h2 class="why__title">Why choose us?</h2>
-					<p class="why__p">A large part of our role is choosing which particular coffees will be featured in our range. This means working closely with the best coffee growers to give you a more impactful experience on every level.</p>
-					<div class="why__blocks">
-						<div class="why__block">
-							<img src="img/2x/coffee-bean.png" srcset="img/2x/coffee-bean.png 1x, img/2x/coffee-bean@2x.png 2x" alt="coffee" class="block__icon">
-							<div class="why__text">
-								<h3 class="block__title">Best quality</h3>
-								<p class="block__p">Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
-							</div>
+
+	<div class="why">
+		<div class="container">
+			<div class="why__inner">
+				<h2 class="why__title">Why choose us?</h2>
+				<p class="why__p">A large part of our role is choosing which particular coffees will be featured in our
+					range. This means working closely with the best coffee growers to give you a more impactful
+					experience on every level.</p>
+				<div class="why__blocks">
+					<div class="why__block">
+						<img src="img/2x/coffee-bean.png"
+							srcset="img/2x/coffee-bean.png 1x, img/2x/coffee-bean@2x.png 2x" alt="coffee"
+							class="block__icon">
+						<div class="why__text">
+							<h3 class="block__title">Best quality</h3>
+							<p class="block__p">Discover an endless variety of the world’s best artisan coffee from each
+								of our roasters.</p>
 						</div>
-						<div class="why__block">
-							<img src="img/2x/surprise.png" srcset="img/2x/surprise.png 1x, img/2x/surprise@2x.png 2x" alt="coffee" class="block__icon">
-							<div class="why__text">
-								<h3 class="block__title">Exclusive benefits</h3>
-								<p class="block__p">Special offers and swag when you subscribe, including 30% off your first shipment.</p>
-							</div>
+					</div>
+					<div class="why__block">
+						<img src="img/2x/surprise.png" srcset="img/2x/surprise.png 1x, img/2x/surprise@2x.png 2x"
+							alt="coffee" class="block__icon">
+						<div class="why__text">
+							<h3 class="block__title">Exclusive benefits</h3>
+							<p class="block__p">Special offers and swag when you subscribe, including 30% off your first
+								shipment.</p>
 						</div>
-						<div class="why__block">
-							<img src="img/2x/truck.png" srcset="img/2x/truck@.png 1x, img/2x/truck@2x.png 2x" alt="coffee" class="block__icon special">
-							<div class="why__text">
-								<h3 class="block__title">Free shipping</h3>
-								<p class="block__p">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
-							</div>
+					</div>
+					<div class="why__block">
+						<img src="img/2x/truck.png" srcset="img/2x/truck@.png 1x, img/2x/truck@2x.png 2x" alt="coffee"
+							class="block__icon special">
+						<div class="why__text">
+							<h3 class="block__title">Free shipping</h3>
+							<p class="block__p">We cover the cost and coffee is delivered fast. Peak freshness:
+								guaranteed.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<div class="h-i-w">
+	<!-- <div class="h-i-w">
 			<div class="container">
 				<h2 class="h-i-w__title">How it works</h2>
 				<div class="h-i-w__inner">
@@ -184,7 +202,7 @@
 		</div> -->
 
 
-	<footer class="footer">
+	<!-- <footer class="footer">
 			<div class="container">
 				<div class="footer__inner">
 					<a class="logo-link" href="./index.html">
@@ -232,7 +250,7 @@
 					</ul>
 				</div>
 			</div>
-		</footer>
+		</footer> -->
 </body>
 
 </html>
