--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			</a>
 
 			<button class="header__menu-button" type='button'>
-				<span>&#9776;</span>
-				<span>&#x2715;</span>
+				<img src="./img/2x/hamburger.svg" alt="hamburger" class="hamburger">
+				<img src="./img/2x/exit.svg" alt="exit" class="exit">
 			</button>
 
 			<nav class="nav">
@@ -37,7 +37,7 @@
 		</div>
 	</header>
 
-	<script src="./scripts/script.js"></script>
+
 	<main class="main">
 		<section class="hero">
 			<div class="container">
@@ -264,6 +264,7 @@
 			</div>
 		</div>
 	</footer>
+	<script src="./scripts/script.js"></script>
 </body>
 
 </html>
